Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-8901

Taskbar rebar is not drawn properly with themes enabled

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.0
    • Shell
    • ROS 65603- 65618

    Description

      Beginning with 65603 audit bug Taskbar and notification area. Panel transparent when using third-party themes.

      Attachments

        1. Aeroros.PNG
          Aeroros.PNG
          971 kB
        2. Aeroros2.PNG
          Aeroros2.PNG
          961 kB
        3. Aeroros3.PNG
          Aeroros3.PNG
          899 kB
        4. explorer.png
          explorer.png
          465 kB
        5. explorer-Lautus.png
          explorer-Lautus.png
          1.20 MB
        6. Items.png
          Items.png
          45 kB
        7. REACTOS_Royale.png
          REACTOS_Royale.png
          76 kB
        8. REACTOS_Royale2.png
          REACTOS_Royale2.png
          63 kB
        9. ReactOS.png
          ReactOS.png
          57 kB
        10. regresion.png
          regresion.png
          57 kB
        11. taskbar_noexplorer.patch
          4 kB
        12. taskbar.patch
          2 kB
        13. taskbar2.patch
          2 kB
        14. taskbar3_amine_plus_67705.patch
          6 kB
        15. taskbar3_amine_plus.patch
          6 kB
        16. taskbar3_amine.patch
          5 kB
        17. taskbar3.patch
          6 kB
        18. themedtoolbar.patch
          5 kB
        19. toolbarpatch2.png
          toolbarpatch2.png
          80 kB

        Issue Links

          Activity

            People

              AmineKhaldi AmineKhaldi
              jperm jperm
              Votes:
              2 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: