[COMCTL32][EXPLORER][UXTHEME] Properly draw the taskbar rebar when themes are enabled. Brought to you by Stefano Toncich aka Tonix. CORE-8901

svn path=/trunk/; revision=68111